// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload List handle error 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-error"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            aria-label="icon: paper-clip"
            class="anticon anticon-paper-clip"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#paper-clip"
              />
            </svg>
          </i>
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
      <div
        class="ant-upload-list-item-progress fade-leave"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px; border-radius: 100px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-uploading ant-upload-animate-enter"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            aria-label="icon: loading"
            class="anticon anticon-loading"
          >
            <svg
              aria-hidden="true"
              class="anticon-spin"
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#loading"
              />
            </svg>
          </i>
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
      <div
        class="ant-upload-list-item-progress"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px; border-radius: 100px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 2`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            aria-label="icon: paper-clip"
            class="anticon anticon-paper-clip"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#paper-clip"
              />
            </svg>
          </i>
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
      <div
        class="ant-upload-list-item-progress fade-leave"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px; border-radius: 100px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should non-image format file preview 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-picture"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-picture"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.zip"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              aria-label="icon: file"
              class="anticon anticon-file ant-upload-list-item-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#file"
                />
              </svg>
            </i>
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.zip"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/aaa"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/aaa"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.xx"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              aria-label="icon: file"
              class="anticon anticon-file ant-upload-list-item-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#file"
                />
              </svg>
            </i>
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.xx"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.png/xx.xx"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              aria-label="icon: file"
              class="anticon anticon-file ant-upload-list-item-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#file"
                />
              </svg>
            </i>
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.png/xx.xx"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="data:image/png;base64,UEsDBAoAAAAAADYZYkwAAAAAAAAAAAAAAAAdAAk"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://publish-pic-cpu.baidu.com/1296beb3-50d9-4276-885f-52645cbb378e.jpeg@w_228%2ch_152"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://publish-pic-cpu.baidu.com/1296beb3-50d9-4276-885f-52645cbb378e.jpeg@w_228%2ch_152"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://publish-pic-cpu.baidu.com/1296beb3-50d9-4276-885f-52645cbb378e.jpeg@w_228%2ch_152"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
      <i
        aria-label="icon: close"
        class="anticon anticon-close"
        tabindex="-1"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#close"
          />
        </svg>
      </i>
    </div>
  </div>
</span>
`;
